# OS4

./: README.md
OS4A/: CMakeLists.txt  CMakeUserPresets.json  receiver.cpp  vcpkg.json
OS4AStandart/: CMakeLists.txt  Receiver.cpp  Receiver_func.cpp
OS4AStandart/Sender/: Sender.cpp
OS4ATest/: CMakeLists.txt  Receiver_func.h  Receiver_func_test.cpp
